# rust-learning-dns-resolver

./: Cargo.toml  README.md
src/: config.rs  dns.rs  greeter.rs  main.rs
