[package]
name = "dns-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.1.6", features = ["derive"] }
thiserror = { version = "1.0" }
anyhow = { version = "1.0" }
mio = { version = "0.8" }
byteorder = "1.4"
bytes = "1"
